medicines/doc-index-updater/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doc-index-updater
  template:
    metadata:
      labels:
        app: doc-index-updater
    spec:
      serviceAccountName: doc-index-updater
      containers:
        - name: doc-index-updater
          image: doc-index-updater
          volumeMounts:
            - name: sftp-keys
              mountPath: "/etc/.ssh"
              readOnly: true
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 30
      volumes:
        - name: sftp-keys
          secret:
            secretName: sentinel-creds
            items:
              - key: public_key
                path: id_rsa.pub
              - key: private_key
                path: id_rsa
