medicines/doc-index-updater/manifests/base/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: doc-index-updater
spec:
  hosts:
    - doc-index-updater.localhost
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: doc-index-updater
